crates/eden-api-server/integration/admin/snapshots/integration__admin__settings__patch_route.snap
---
source: crates/eden-api-server/integration/admin/settings.rs
expression: body
---
{
  "allow_guests": false,
  "updated_at": "1970-01-01T00:00:00.000Z"
}
